[package]
name = "ivy"
version = "0.0.1"
edition = "2021"

[lib]
name = "ivyrs"
crate-type = ["cdylib", "rlib"]
path = "rust/lib.rs"

[dependencies]
ignore = "0.4.21"
fuzzy-matcher = "0.3.7"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
opt-level = 3

[profile.bench]
debug = true

[[bench]]
name = "ivy_match"
harness = false

[[bench]]
name = "ivy_files"
harness = false
